--- a/calculatormainwindow.ui
+++ b/calculatormainwindow.ui
@@ -19,7 +19,7 @@
      <rect>
       <x>260</x>
       <y>80</y>
-      <width>271</width>
+      <width>300</width>
       <height>401</height>
      </rect>
     </property>
@@ -234,7 +234,7 @@
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
+     <item row="6" column="0" colspan="2">
       <widget class="QPushButton" name="pushButton_0">
        <property name="font">
         <font>
@@ -252,6 +252,19 @@
        </property>
       </widget>
      </item>
+     <item row="6" column="2">
+      <widget class="QPushButton" name="decimalButton">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>.</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
   </widget>
@@ -261,7 +274,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>37</height>
+     <height>24</height>
     </rect>
    </property>
   </widget>
